--- a/K53_Rules_Test/road_rules_test6.html
+++ b/K53_Rules_Test/road_rules_test6.html
@@ -2751,6 +2751,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var rules_test6 = score; 
+		localStorage.setItem("rules_test6", rules_test6);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3099,6 +3101,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
