--- a/K53_Rules_Test/road_rules_tests.html
+++ b/K53_Rules_Test/road_rules_tests.html
@@ -114,7 +114,49 @@
  		lastScrollTop = scrollTop;
  	})
 
+	  const rules_test1 = localStorage.getItem("rules_test1") || 0;
+	  if (rules_test1 > 25){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  const rules_test2 = localStorage.getItem("rules_test2") || 0;
+	  if (rules_test2 > 25){
+		  document.getElementById("1").style.borderColor = "green";
+	  }
+	  	  const rules_test3 = localStorage.getItem("rules_test3") || 0;
+	  if (rules_test3 > 25){
+		  document.getElementById("2").style.borderColor = "green";
+	  }
+	  	  const rules_test4 = localStorage.getItem("rules_test4") || 0;
+	  if (rules_test4 > 25){
+		  document.getElementById("3").style.borderColor = "green";
+	  }
+	  	  const rules_test5 = localStorage.getItem("rules_test5") || 0;
+	  if (rules_test5 > 25){
+		  document.getElementById("4").style.borderColor = "green";
+	  }
+	  	  const rules_test6 = localStorage.getItem("rules_test6") || 0;
+	  if (rules_test6 > 25){
+		  document.getElementById("5").style.borderColor = "green";
+	  }
+	  	  const rules_test7 = localStorage.getItem("rules_test7") || 0;
+	  if (rules_test7 > 25){
+		  document.getElementById("6").style.borderColor = "green";
+	  }
+	  	  const rules_test8 = localStorage.getItem("rules_test8") || 0;
+	  if (rules_test8 > 25){
+		  document.getElementById("7").style.borderColor = "green";
+	  }
+	  	  const rules_test9 = localStorage.getItem("rules_test9") || 0;
+	  if (rules_test9 > 25){
+		  document.getElementById("8").style.borderColor = "green";
+	  }
+	  	  const rules_test10 = localStorage.getItem("rules_test10") || 0;
+	  if (rules_test10 > 25){
+		  document.getElementById("9").style.borderColor = "green";
+	  }
+	  
  </script>
+
 
 
 
