--- a/K53_Controls_Test/motorcycle_controls.html
+++ b/K53_Controls_Test/motorcycle_controls.html
@@ -1557,6 +1557,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+		var controls_score = score; 
+		localStorage.setItem("controls_score", controls_score);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -1908,6 +1910,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
