--- a/K53_Book_Test/bookc_heavyvehicle_test.html
+++ b/K53_Book_Test/bookc_heavyvehicle_test.html
@@ -5767,6 +5767,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var bookc_heavy = score; 
+		localStorage.setItem("bookc_heavy", bookc_heavy);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6116,6 +6118,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
