--- a/K53_Book_Test/bookb_heavyvehicle_test.html
+++ b/K53_Book_Test/bookb_heavyvehicle_test.html
@@ -5762,6 +5762,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var bookd_heavy = score; 
+		localStorage.setItem("bookd_heavy", bookd_heavy);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6110,6 +6112,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
