--- a/K53_Book_Test/booka_lightvehicle_test.html
+++ b/K53_Book_Test/booka_lightvehicle_test.html
@@ -5745,6 +5745,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var booka_light = score; 
+		localStorage.setItem("booka_light", booka_light);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6096,6 +6098,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
