--- a/K53_Learners_Test/b_lightvehicle_test.html
+++ b/K53_Learners_Test/b_lightvehicle_test.html
@@ -5719,6 +5719,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+							var bookb_light = score; 
+		localStorage.setItem("bookb_light", bookb_light);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6067,6 +6069,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
