--- a/K53_Book_Test/booka_motorcycle_test.html
+++ b/K53_Book_Test/booka_motorcycle_test.html
@@ -5753,6 +5753,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+							var booka_motor = score; 
+		localStorage.setItem("booka_motor", booka_motor);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6101,6 +6103,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
