--- a/K53_Book_Test/bookb_motorcycle_test.html
+++ b/K53_Book_Test/bookb_motorcycle_test.html
@@ -5761,6 +5761,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+									var bookd_motor = score; 
+		localStorage.setItem("bookd_motor", bookd_motor);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6109,6 +6111,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
