--- a/K53_Book_Test/bookc_motorcycle_test.html
+++ b/K53_Book_Test/bookc_motorcycle_test.html
@@ -5767,6 +5767,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+									var bookc_motor = score; 
+		localStorage.setItem("bookc_motor", bookc_motor);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6117,6 +6119,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
