--- a/K53_Learners_Test/b_motorcycle_test.html
+++ b/K53_Learners_Test/b_motorcycle_test.html
@@ -5722,6 +5722,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+									var bookb_motor = score; 
+		localStorage.setItem("bookb_motor", bookb_motor);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6074,6 +6076,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
