--- a/K53_Book_Test/heavyvehicle_book_tests.html
+++ b/K53_Book_Test/heavyvehicle_book_tests.html
@@ -131,11 +131,12 @@
 	  if (bookc_heavy > 59){
 		  document.getElementById("2").style.borderColor = "green";
 	  }
-	  	  const bookd_heavy4 = localStorage.getItem("bookd_heavy") || 0;
+	  	  const bookd_heavy = localStorage.getItem("bookd_heavy") || 0;
 	  if (bookd_heavy > 59){
 		  document.getElementById("3").style.borderColor = "green";
 	  }
  </script>
+
 
 
 
