--- a/K53_Learners_Test/a_heavyvehicle_test.html
+++ b/K53_Learners_Test/a_heavyvehicle_test.html
@@ -5704,6 +5704,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+					var learners_score = score; 
+		localStorage.setItem("learners_score", learners_score);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6053,6 +6055,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
