--- a/K53_Learners_Test/a_motorcycle_test.html
+++ b/K53_Learners_Test/a_motorcycle_test.html
@@ -5699,6 +5699,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+							var learners_score = score; 
+		localStorage.setItem("learners_score", learners_score);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -6048,6 +6050,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
