--- a/home_images/home.html
+++ b/home_images/home.html
@@ -61,7 +61,7 @@
 
 
 <div class="ps" style="margin-top: 50px;">
-	<img src="K53_Controls_Test.PNG" class="center" style=" width: 100px; height: 100px;" id="controls_star">
+	<img src="star.jpeg" class="center" style=" width: 100px; height: 100px;" id="controls_star">
   <a href="../K53_Controls_Test/test_code.html">
     <img src="K53_Controls_Test.PNG" class="center">
   </a>
@@ -232,7 +232,7 @@ if ('serviceWorker' in navigator) {
 
   const controlsCanvas = document.getElementById("controls_star");
 
-  if (progress_controls > 1) {
+  if (controls > 1) {
     controlsCanvas.style.visibility = "visible";
   } else {
     controlsCanvas.style.visibility = "hidden";
@@ -301,6 +301,7 @@ if ('serviceWorker' in navigator) {
 
     progress_learners.style.width = controls + "px";
 </script>
+
 
 
 
