--- a/home_images/home.html
+++ b/home_images/home.html
@@ -61,7 +61,7 @@
 
 
 <div class="ps" style="margin-top: 50px;">
-	<img src="star.jpeg" class="center" style=" width: 100px; height: 100px;" id="controls_star">
+	<img src="star.jpg" class="center" style=" width: 100px; height: 100px;" id="controls_star">
   <a href="../K53_Controls_Test/test_code.html">
     <img src="K53_Controls_Test.PNG" class="center">
   </a>
@@ -301,6 +301,7 @@ if ('serviceWorker' in navigator) {
 
     progress_learners.style.width = controls + "px";
 </script>
+
 
 
 
