--- a/home_images/home.html
+++ b/home_images/home.html
@@ -63,7 +63,7 @@
 <div class="ps" style="margin-top: 50px;">
 	
   <a href="../K53_Controls_Test/test_code.html">
-	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="controls_star"> <br>
+	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="controls_star"> <br><br>
     <img src="K53_Controls_Test.PNG" class="center">
   </a>
 </div>
@@ -302,6 +302,7 @@ if ('serviceWorker' in navigator) {
 
     progress_learners.style.width = controls + "px";
 </script>
+
 
 
 
