--- a/home_images/home.html
+++ b/home_images/home.html
@@ -75,9 +75,9 @@
 </div>
 
 		  <a href="../K53_Sign_Test/road_sign_tests.html">
-	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="signs_star">
+	<img src="star.jpg" class="center" style="width: 100px; height: 100px; visibility: hidden;" id="signs_star">
   </a>
-		<div class="ps" style="margin-top: 50px;">
+		<div class="ps">
 			<a href="../K53_Sign_Test/road_sign_tests.html"><img src="K53_Signs_Test.PNG"></a>
 		</div>	
 			<div class="progress-bar2">
@@ -87,9 +87,9 @@
 		</div>	
 
 			  <a href="../K53_Rules_Test/road_rules_tests.html">
-	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="rules_star">
+	<img src="star.jpg" class="center" style="width: 100px; height: 100px; visibility: hidden;" id="rules_star">
   </a>
-		<div class="ps" style="margin-top: 50px;">
+		<div class="ps">
 			<a href="../K53_Rules_Test/road_rules_tests.html"><img src="K53_Rules_Test.PNG"></a>
 		</div>
 			<div class="progress-bar2">
@@ -99,9 +99,9 @@
 		</div>	
 
 				  <a href="../K53_Book_Test/book_test_code.html">
-	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="book_star">
+	<img src="star.jpg" class="center" style="width: 100px; height: 100px; visibility: hidden;" id="book_star">
   </a>
-		<div class="ps" style="margin-top: 50px;">
+		<div class="ps">
 			<a href="../K53_Book_Test/book_test_code.html"><img src="K53_Book_Test.PNG"></a>
 		</div>	
 			<div class="progress-bar2">
@@ -110,9 +110,9 @@
 			</div>
 		</div>	
 					  <a href="../K53_Learners_Test/learners_test_code.html">
-	<img src="star.jpg" class="center" style="width: 100px; height: 100px;" id="learners_star">
+	<img src="star.jpg" class="center" style="width: 100px; height: 100px;  visibility: hidden;" id="learners_star">
   </a>
-		<div class="ps" style="margin-top: 50px;">
+		<div class="ps" >
 			<a href="../K53_Learners_Test/learners_test_code.html"><img src="K53_Learners_Test.PNG"></a>
 		</div>
 
@@ -347,6 +347,7 @@ if ('serviceWorker' in navigator) {
     learnersCanvas.style.visibility = "hidden";
   }
 </script>
+
 
 
 
